--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,21 +15,21 @@ body {
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 221 34% 50%; /* #5871A7 */
+    --primary: 236 41% 50%; /* #4E58B1 */
     --primary-foreground: 0 0% 98%;
-    --secondary: 42 33% 50%; /* #A78E58 */
+    --secondary: 55 41% 50%; /* #B1A74E */
     --secondary-foreground: 0 0% 98%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
-    --accent: 310 32% 50%; /* #A75899 */
+    --accent: 326 41% 50%; /* #B14E8A */
     --accent-foreground: 0 0% 98%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
-    --ring: 221 34% 50%; /* #5871A7 */
+    --ring: 236 41% 50%; /* #4E58B1 */
     --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
+    --chart-1: 145 39% 50%; /* #4EB175 */
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
@@ -47,36 +47,36 @@ body {
   .dark {
     --background: 0 0% 0%; /* black */
     --foreground: 240 5% 95%;
-    --card: 213 39% 50%; /* #517cae */
+    --card: 220 13% 18%;
     --card-foreground: 240 5% 95%;
     --popover: 220 13% 11%;
     --popover-foreground: 240 5% 95%;
-    --primary: 221 34% 50%; /* #5871A7 */
+    --primary: 236 41% 50%; /* #4E58B1 */
     --primary-foreground: 0 0% 98%;
-    --secondary: 42 33% 50%; /* #A78E58 */
+    --secondary: 55 41% 50%; /* #B1A74E */
     --secondary-foreground: 0 0% 98%;
     --muted: 220 13% 25%;
     --muted-foreground: 240 5% 65%;
-    --accent: 310 32% 50%; /* #A75899 */
+    --accent: 326 41% 50%; /* #B14E8A */
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
     --border: 220 13% 25%;
     --input: 220 13% 25%;
-    --ring: 221 34% 50%; /* #5871A7 */
-    --chart-1: 220 70% 50%;
+    --ring: 236 41% 50%; /* #4E58B1 */
+    --chart-1: 145 39% 50%; /* #4EB175 */
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    --sidebar-background: 213 39% 50%; /* #517cae */
+    --sidebar-background: 220 13% 18%;
     --sidebar-foreground: 240 5% 95%;
-    --sidebar-primary: 221 34% 50%; /* #5871A7 */
+    --sidebar-primary: 236 41% 50%; /* #4E58B1 */
     --sidebar-primary-foreground: 0 0% 98%;
     --sidebar-accent: 220 13% 25%;
     --sidebar-accent-foreground: 240 5% 95%;
     --sidebar-border: 220 13% 25%;
-    --sidebar-ring: 221 34% 50%; /* #5871A7 */
+    --sidebar-ring: 236 41% 50%; /* #4E58B1 */
   }
 }
 
